templates/nested/security-groups.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: >
  Security groups for the ALB, ECS tasks, and RDS PostgreSQL instance.

Parameters:
  EnvironmentName:
    Type: String
    Default: photo-uploader

  VpcId:
    Type: AWS::EC2::VPC::Id

  ContainerPort:
    Type: Number
    Default: 3000

  DatabasePort:
    Type: Number
    Default: 5432

Resources:
  AlbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Public ALB - allow inbound HTTP/HTTPS from the internet
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-alb-sg

  EcsServiceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ECS tasks - allow inbound only from the ALB on the container port
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-ecs-sg

  EcsServiceIngressFromAlb:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref EcsServiceSecurityGroup
      IpProtocol: tcp
      FromPort: !Ref ContainerPort
      ToPort: !Ref ContainerPort
      SourceSecurityGroupId: !Ref AlbSecurityGroup

  DatabaseSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: RDS PostgreSQL - allow inbound only from ECS tasks
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-db-sg

  DatabaseIngressFromEcs:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref DatabaseSecurityGroup
      IpProtocol: tcp
      FromPort: !Ref DatabasePort
      ToPort: !Ref DatabasePort
      SourceSecurityGroupId: !Ref EcsServiceSecurityGroup

Outputs:
  AlbSecurityGroupId:
    Value: !Ref AlbSecurityGroup

  EcsServiceSecurityGroupId:
    Value: !Ref EcsServiceSecurityGroup

  DatabaseSecurityGroupId:
    Value: !Ref DatabaseSecurityGroup
